key added, aligned with case study

--- a/module-1/sml-1-case-study-key-python.qmd
+++ b/module-1/sml-1-case-study-key-python.qmd
@@ -15,7 +15,11 @@ editor: visual
 ---
 
 ```{r setup, include=FALSE}
-set.seed(20240706) # so the results are readily reproducible
+reticulate::py_install("pandas")
+reticulate::py_install("numpy")
+reticulate::py_install("statsmodels")
+reticulate::py_install("scikit-learn")
+reticulate::py_install("matplotlib")
 ```
 
 ## 1. PREPARE
@@ -46,75 +50,84 @@ In this module, we will be using data from the [IPEDS, the Integrated Postsecond
 
 ### Loading packages
 
-As highlighted in [Chapter 6 of Data Science in Education Using R](https://datascienceineducation.com/c06.html) (DSIEUR), one of the first steps of every workflow should be to set up your "Project" within RStudio. Recall that:
+As highlighted in [Chapter 6 of Data Science in Education Using R](https://datascienceineducation.com/c06.html) (DSIEUR), one of the first steps of every workflow should be to set up your "Project" structure. Recall that:
 
 > A **Project** is the home for all of the files, images, reports, and code that are used in any given project
 
-Since we are working from an R project cloned from [GitHub](https://github.com/laser-institute), a Project has already been set up for you as indicated by the `.Rproj` file in your main directory in the Files pane. Instead, we will focus on getting our project set up withe the requisite packages we'll need for analysis.
+Since we are working from a Python project cloned from [GitHub](https://github.com/laser-institute), a Project has already been set up for you. Instead, we will focus on getting our project set up with the requisite Python Libraries we'll need for analysis.
 
-**Packages**, sometimes called libraries, are shareable collections of R code that can contain functions, data, and/or documentation and extend the functionality of R. You can always check to see which packages have already been installed and loaded into RStudio Cloud by looking at the the Files, Plots, & Packages Pane in the lower right-hand corner.
+**Libraries**, are shareable collections of Python code that can contain functions, data, and/or documentation and extend the functionality of the base Python language. Libraries are loaded with the "import" keyword often with a namespace; e.g., `import pandas as pd`.
 
-Two packages we'll use extensively throughout these learning labs are the {tidyverse} and {tidymodels} packages.
+#### pandas 🐼
 
-#### tidyverse 📦
+![](img/Pandas_logo.png){width="20%"}
 
-![](img/tidyverse.png){width="20%"}
+One of the core libraries we’ll use throughout LASER is **`pandas`**, Python’s go-to toolkit for working with data in tabular form. The `pandas` library provides powerful, flexible data structures — especially the `DataFrame`, which is similar to R’s `tibble`.
 
-One package that we'll be using extensively throughout LASER is the {tidyverse} package. Recall from earlier tutorials that the {tidyverse} package is actually a [collection of R packages](https://www.tidyverse.org/packages) designed for reading, wrangling, and exploring data and which all share an underlying design philosophy, grammar, and data structures. These shared features are sometimes "tidy data principles."
+With `pandas`, you can:
 
-Click the green arrow in the right corner of the "code chunk" that follows to load the {tidyverse} library.
+-   read and write data from a variety of formats (like CSV, Excel, and SQL)
 
-```{r}
-library(tidyverse)
+-   filter, reshape, and summarize datasets
+
+-   and perform complex data transformations with concise, readable code
+
+Think of `pandas` as the Python equivalent of the tidyverse’s **data wrangling** toolkit.
+
+To get started, you can import the library like this:
+
+```{python}
+#| eval: false
+import pandas as pd
 ```
 
-#### tidymodels
+#### scikit-learn 🤖
 
-[![](img/tidymodels.png){width="20%"}](https://www.tidymodels.org/)
+[![](img/sklearn_logo.png){width="20%"}](https://scikit-learn.org/)
 
-The [tidymodels](https://www.tidymodels.org/) package is a "meta-package" for modeling and statistical analysis that shares the underlying design philosophy, grammar, and data structures of the [tidyverse](https://www.tidyverse.org/). It includes a core set of packages that are loaded on startup and contains tools for:
+[`scikit-learn`](https://scikit-learn.org/) is Python’s most widely used library for machine learning and statistical modeling. It provides a consistent and intuitive API for building and evaluating models — similar in spirit to R’s `tidymodels`.
 
--   data splitting and pre-processing;
+With `scikit-learn`, you can:
 
--   model selection, tuning, and evaluation;
+-   split data into training and test sets
 
--   feature selection and variable importance estimation;
+-   preprocess features with pipelines
 
--   as well as other functionality.
+-   train a wide variety of models (regression, classification, clustering, etc.)
+
+-   tune hyperparameters and evaluate performance
+
+It’s designed to be modular and composable, making it easy to build repeatable workflows that integrate cleanly with `pandas` and other scientific Python libraries.
 
 #### **👉 Your Turn** **⤵**
 
-In addition to the {tidyverse} package, we'll also be using {tidymodels} and the lightweight but highly useful {janitor} package to help with some data cleaning tasks. Use the code chunk below to load both tidymodels and janitor.
+In addition to pandas and sci-kit learn (sklearn) we will also use the statsmodels library to do regression analysis with its formula interface.
 
-```{r}
-library(tidymodels)
-library(janitor)
+Use the code chunk below to load pandas and statsmodels.
+
+```{python}
+import pandas as pd 
+import statsmodels.formula.api as smf
 ```
 
-As a tip, remember to use the `library()` function to load these packages. After you've done that, click the green arrow to run the code chunk. If you see a bunch of messages (not anything labeled as an error), you are good to go! These messages mean the packages loaded correctly.
+Tip: Avoid using wildcard imports (like `from module import *`) when loading a library. Instead, import the full library, import a specific function (`from sklearn.model_selection import train_test_split` -- we'll use this later!) or use a clear alias (`import statsmodels.formula.api as smf`). This helps keep your namespace clean, avoids conflicts, and makes your code easier to read and maintain.
 
 ### Loading data
 
-Next, we'll read in data. We'll use the `read_csv()` function to load the data file.
+Next, we'll read in data. We'll use the pandas `read_csv()` function to load the data file.
 
 For now, please read in the \`ipeds-all-title-9-2022-data.csv\` file. Use the `read_csv()` function to do this, paying attention to where those files are located relative to this case study file – in the data folder!
 
-```{r}
-ipeds <- read_csv("data/ipeds-all-title-9-2022-data.csv")
-```
-
-We'll then use a handy function from janitor, `clean_names()`. It does what it seems like it should - it cleans the names of variables, making them easy to view and type. Run this next code chunk.
-
-```{r}
-ipeds <- janitor::clean_names(ipeds)
+```{python}
+ipeds_df = pd.read_csv("data/ipeds-all-title-9-2022-data.csv")
 ```
 
 #### **👉 Your Turn** **⤵**
 
-In the chunk below, examine the data set using a function or means of your choice (such as just *printing* the data set by typing its name or using the `glimpse()` function). Do this in the code chunk below! Note its dimensions --- especially how many rows it has!
+In the chunk below, examine the data set using a function or means of your choice (such as just *printing* the data set by typing its name or using the `.head()` method). Do this in the code chunk below! Note its dimensions --- especially how many rows it has!
 
-```{r}
-glimpse(ipeds)
+```{python}
+ipeds_df.head()
 ```
 
 #### **👉 Your Turn** **⤵**
@@ -127,32 +140,33 @@ Write down a few observations after inspecting the data - and any all observatio
 
 ## 2. WRANGLE
 
-Even though we cleaned the names to make them easier to view and type (thanks, `clean_names()`), they are still pretty long.
+These code names are pretty long. Let's clean them up by mapping them and then selecting only the columns we need.
 
-The code chunk below uses a very handy function, `select()`. This allows you to simultaneously choose and rename variables, returning a data frame with only the variables you have selected --- named as you like. For now, we'll just run this code. Later in your analyses, you'll almost certainly use `select()` to get a more manageable dataset.
+```{python}
+column_map = {
+    'institution name': 'name',
+    'HD2022.Postsecondary and Title IV institution indicator': 'title_iv',  # is the university a title IV university?
+    'HD2022.Carnegie Classification 2021: Basic': 'carnegie_class',  # which carnegie classification
+    'HD2022.State abbreviation': 'state',  # state
+    'DRVEF2022.Total  enrollment': 'total_enroll',  # total enrollment
+    'DRVADM2022.Percent admitted - total': 'pct_admitted',  # percentage of applicants admitted
+    "DRVC2022.Bachelor's degree": 'n_bach',  # number of students receiving a bachelor's degree
+    "DRVC2022.Master's degree": 'n_mast',  # number of students receiving a master's degree
+    "DRVC2022.Doctor's degree - research/scholarship": 'n_doc',  # number receive a doctoral degree
+    'DRVIC2022.Tuition and fees, 2021-22': 'tuition_fees',  # total cost of tuition and fees
+    'DRVGR2022.Graduation rate, total cohort': 'grad_rate',  # graduation rate
+    'SFA2122.Percent of full-time first-time undergraduates awarded any financial aid': 'percent_fin_aid',  # percent of students receive financial aid
+    'DRVHR2022.Average salary equated to 9 months of full-time instructional staff - all ranks': 'avg_salary'  # average salary of instructional staff
+}
 
-```{r}
-ipeds <- ipeds %>% 
-    select(name = institution_name, 
-           title_iv = hd2022_postsecondary_and_title_iv_institution_indicator, # is the university a title IV university?
-           carnegie_class = hd2022_carnegie_classification_2021_basic, # which carnegie classification
-           state = hd2022_state_abbreviation, # state
-           total_enroll = drvef2022_total_enrollment, # total enrollment
-           pct_admitted = drvadm2022_percent_admitted_total, # percentage of applicants admitted
-           n_bach = drvc2022_bachelors_degree, # number of students receiving a bachelor's degree
-           n_mast = drvc2022_masters_degree, # number receiving a master's
-           n_doc = drvc2022_doctors_degree_research_scholarship, # number receive a doctoral degree
-           tuition_fees = drvic2022_tuition_and_fees_2021_22, # total cost of tuition and fees
-           grad_rate = drvgr2022_graduation_rate_total_cohort, # graduation rate
-           percent_fin_aid = sfa2122_percent_of_full_time_first_time_undergraduates_awarded_any_financial_aid, # percent of students receive financial aid
-           avg_salary = drvhr2022_average_salary_equated_to_9_months_of_full_time_instructional_staff_all_ranks) # average salary of instructional staff
+ipeds_df = ipeds_df.rename(columns=column_map)  # first map column names ... 
+ipeds_df = ipeds_df[column_map.values()]  # then select the columns it mapped.
 ```
 
-A useful function for exploring data is `count()`; it does what it sounds like! It counts how many times values for a variable appear.
+A useful method for exploring data is `.value_counts()`; it does what it sounds like! It operates on a column of a DataFrame and counts how many times values for a variable appear.
 
-```{r}
-ipeds %>% 
-    count(title_iv)
+```{python}
+ipeds_df['title_iv'].value_counts()  # if you want to know proportions of each value you can use the normalize=True parameter like `.value_counts(normalize=True)`
 ```
 
 This suggests we may wish to filter the 30 non-Title IV institutions --- something we'll do shortly.
@@ -161,21 +175,21 @@ This suggests we may wish to filter the 30 non-Title IV institutions --- somethi
 
 Can you count another variable? Pick another (see the code chunk two above) and add a count below. While simple, counting up different values in our data can be very informative (and can often lead to further explorations)!
 
-```{r}
-ipeds %>% 
-    count(carnegie_class)
+```{python}
+ipeds_df['state'].value_counts(normalize=True)  # try the normalize parameter
 ```
 
 ### Filtering
 
-`filter()` is a very handy function that is part of the tidyverse; it filters to *include* (or *exclude*) observations in your data based upon logical conditions (e.g., `==`, `>`, `<=`, etc.). See more [here](https://dplyr.tidyverse.org/reference/filter.html) if interested.
+`.query()` is a very handy pandas method; it filters to *include* (or *exclude*) observations in your data based upon logical conditions (e.g., `==`, `>`, `<=`, etc.). See more [here](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.query.html) if interested.
 
 Below, we filter the data to include only Title IV postsecondary institutions.
 
-```{r}
-ipeds <- ipeds %>% 
-    filter(title_iv == "Title IV postsecondary institution")
+```{python}
+ipeds_df = ipeds_df.query('title_iv == "Title IV postsecondary institution"')  # filter to Title IV
 ```
+
+Consider checking that this filtering worked by running `.value_counts()` again on the `title_iv` column.
 
 #### **👉 Your Turn** **⤵**
 
@@ -183,29 +197,33 @@ Can you filter the data again, this time to *only* include institutions with a c
 
 In other words, can you exclude those institutions with a value for the `carnegie_class` variable that is "Not applicable, not in Carnegie universe (not accredited or nondegree-granting)")? A little hint: whereas the logical operator `==` is used to include only matching conditions, the logical operator `!=` excludes matching conditions.
 
-```{r}
-ipeds <- ipeds %>% 
-    filter(carnegie_class != "Not applicable, not in Carnegie universe (not accredited or nondegree-granting)")
+```{python}
+ipeds_df = ipeds_df.query('carnegie_class != "Not applicable, not in Carnegie universe (not accredited or nondegree-granting)"')
 ```
 
 #### **👉 Your Turn** **⤵**
 
-We're cruising! Let's take another peak at our data - using `glimpse()` or another means of your choosing below.
+We're cruising! Let's take another peak at our data - using `.head()` or another means of your choosing below.
 
-```{r}
-glimpse(ipeds)
+```{python}
+ipeds_df.head()
 ```
 
 ## 3. EXPLORE
 
 One key step in most analyses is to explore the data. Here, we conduct an exploratory data analysis with the IPEDS data, focusing on the key outcome of graduate rate.
 
-Below, we use the ggplot2 package (part of the tidyverse) to visualize the *spread* of the values of our dependent variable, `grad_rate`, which represents institutions' graduation rate. There is a *lot* to ggplot2, and data visualizations are not the focus of this module, but [this web page](https://ggplot2.tidyverse.org/) has a lot of information you can use to learn more, if you are interested. ggplot2 is fantastic for creating publication-ready visualizations!
+Below, we use the [matplotlib](https://matplotlib.org) package (part of base Python) to visualize the *spread* of the values of our dependent variable, `grad_rate`, which represents institutions' graduation rate. There is a *lot* to matplotlib, and data visualizations are not the focus of this module. While useful for quickly validating data, consider exploring more advanced Python data visualization libraries such as [seaborn](https://seaborn.pydata.org/) and [plotly](https://plotly.com/).
 
-```{r}
-ipeds %>% 
-    ggplot(aes(x = grad_rate)) +
-    geom_histogram()
+```{python}
+import matplotlib.pyplot as plt 
+
+plt.style.use('ggplot')  # optional for beautification
+
+plt.hist(ipeds_df['grad_rate'].values, bins=30, edgecolor='white', color='skyblue')
+plt.xlabel('Graduation Rate (%)')
+plt.ylabel('Number of Institutions')
+plt.show()
 ```
 
 What do you notice about this graph -- and about graduation rate?
@@ -215,28 +233,26 @@ What do you notice about this graph -- and about graduation rate?
 
 #### **👉 Your Turn** **⤵**
 
-Below, can you add one ggplot2 plot with a different variable/variables? Use the ggplot2 page linked above (also [here](https://ggplot2.tidyverse.org/)) or the code above as a starting point (another histogram is fine!) for your visualization.
+Below, can you add one matplotlib plot with a different variable/variables? Use the matplotlib page linked above (also [here](https://matplotlib.org/stable/plot_types/index.html)) or the code above as a starting point (another histogram is fine!) for your visualization.
 
-```{r}
-ipeds %>% 
-    ggplot(aes(x = pct_admitted)) +
-    geom_histogram()
-
-ipeds %>% 
-    ggplot(aes(x = tuition_fees, y = total_enroll, color = avg_salary)) +
-    geom_point()
+```{python}
+plt.hist(ipeds_df['avg_salary'].values, bins=30, edgecolor='white', color='skyblue')
+plt.xlabel('Average Salary of Instructional Staff (USD)')
+plt.ylabel('Number of Institutions')
+plt.show()
 ```
 
 We'll next do a little additional data wrangling. For now, we'll model our dependent variable, `grad_rate`, as a dichotomous (i.e., yes or no; 1 or 0) dependent variable. This isn't necessary, but it makes the contrast between the regression and supervised machine learning model a bit more vivid, and also dichotomous and categorical outcome variables are common in supervised machine learning applications, and so we'll do this for this case study.
 
 #### **👉 Your Turn** **⤵**
 
-Your next task is to decide what constitutes a good graduation rate. Our only suggestion - don't pick a number *too* close to 0% or 100%. Otherwise, please replace XXX below with the number from 0-100 that represents the graduation rate percentage. Just add the number --- don't add the percentage symbol.
+Your next task is to decide what constitutes a good graduation rate. Our only suggestion - don't pick a number *too* close to 0% or 100%. Otherwise, please replace XXX below with the number from 0-100 that represents the graduation rate percentage. Just add the number --- don't add the percentage symbol. This code uses a common Python library used in data wrangling [NumPy](https://numpy.org/).
 
-```{r}
-ipeds <- ipeds %>% 
-    mutate(good_grad_rate = if_else(grad_rate > 62, 1, 0),
-           good_grad_rate = as.factor(good_grad_rate))
+```{python}
+
+import numpy as np 
+
+ipeds_df['good_grad_rate'] = np.where(ipeds_df['grad_rate'] > XXX, 1, 0)
 ```
 
 Here, add a reason or two for how and why you picked the number you did:
@@ -249,7 +265,7 @@ Here, add a reason or two for how and why you picked the number you did:
 
 Now, we reach a fork in the road. Recall from our first reading that there are two general types of modeling approaches: unsupervised and supervised machine learning. In Part 4, we focus on supervised learning models, which are used to quantify relationships between features (e.g., motivation and performance) and a known outcome (e.g., student drop out). These models can be used for classification of binary or categorical outcomes, as we'll illustrate in this section, or regression as we'll demonstrate in modules 2 and 3.
 
-Please write our preliminary, draft research questions for both a regression (RQ A) and supervised machine learning (RQ B) analysis. It may help to review the readings for this module; you can find them in the `lit` folder; they are listed in `sml-1-readings.qmd`, too. There aren't right or wrong answers here; the point is to try to draw out what question might accompany these different analyses (or vice versa - what research questions are feasible to answer using different analyses).
+Please write out preliminary, draft research questions for both a regression (RQ A) and supervised machine learning (RQ B) analysis. It may help to review the readings for this module; you can find them in the `lit` folder; they are listed in `sml-1-readings.qmd`, too. There aren't right or wrong answers here; the point is to try to draw out what question might accompany these different analyses (or vice versa - what research questions are feasible to answer using different analyses).
 
 #### **👉 Your Turn** **⤵**
 
@@ -263,32 +279,50 @@ Please write our preliminary, draft research questions for both a regression (RQ
 
 Now, we will proceed to the analyses.
 
-We'll first conduct a regression analysis, like in the code-along. We use a generalized linear model due to the dependent variable being dichotomous. The code is relatively straightforward; the comments explain each step.
+We'll first conduct a regression analysis, like in the code-along. We use a logistic regression (`smf.logit`) due to the dependent variable being dichotomous. The code is relatively straightforward; the comments explain each step.
 
-```{r}
-m1 <- glm(good_grad_rate ~ total_enroll + pct_admitted + n_bach + n_mast + n_doc + tuition_fees + percent_fin_aid + avg_salary, data = ipeds, family = "binomial") # to the left of the ~ is our dependent variable; to the right are the independent variables; family = "binomial" is to specify the correct model type for the dichotomous dependent variable
+```{python}
+import statsmodels.formula.api as smf  # load the statsmodels formula API as smf
 
-summary(m1) # summary table of model output
+model = smf.logit(
+    formula='good_grad_rate ~ total_enroll + pct_admitted + n_bach + n_mast + n_doc + tuition_fees + percent_fin_aid + avg_salary',  # define the formula
+    data=ipeds_df  # provide the dataset that contains those columns
+).fit()  # train the model on the entire dataset
+
+model.summary()  # print the statistical summary for the regression analysis
 ```
 
-Then, we'll conduct a supervised machine learning analysis (with a simple but still commonly used model - in fact, the same model we used for the regression, a generalized linear model!). Again, for now, you'll run this code; later, you'll work through each step in detail.
+Then, we'll conduct a supervised machine learning analysis (with a simple but still commonly used model - in fact, the same model we used for the regression, a logistic regression model!). Again, for now, you'll run this code; later, you'll work through each step in detail.
 
-```{r}
-my_rec <- recipe(good_grad_rate ~ total_enroll + pct_admitted + n_bach + n_mast + n_doc + tuition_fees + percent_fin_aid + avg_salary, data = ipeds) # same as above; this sets up what predicts the outcome
+```{python}
+from sklearn.model_selection import train_test_split
+from sklearn.linear_model import LogisticRegression
+from sklearn.metrics import accuracy_score
 
-# specify model
-my_mod <-
-    logistic_reg() %>% # specifies a logistic regression
-    set_engine("glm") %>% # specifies the specific package used to estimate the logistic regression
-    set_mode("classification") # specifies that our outcome is a dichotomous or categorical variable
+ipeds_df = ipeds_df.dropna()  # Todo(josh and aaron): discuss dropping vs imputation
+train_df, test_df = train_test_split(ipeds_df, test_size=0.2, random_state=42)  # splitting the data and sedding a random state so this is reproducible.
 
-my_wf <- workflow() %>% # this starts a workflow, which will stitch together the steps in our analysis
-    add_model(my_mod) %>% # adds the model
-    add_recipe(my_rec) # adds the recipe
+dependent_col = 'good_grad_rate'  # the name of the value that we are modeling - the 1/0 column for a good graduation rate
+independent_cols = [  # the independent columns to predict the dependent column
+    'total_enroll',
+    'pct_admitted',
+    'n_bach',
+    'n_mast',
+    'n_doc',
+    'tuition_fees',
+    'percent_fin_aid',
+    'avg_salary'
+]
 
-fit_model <- last_fit(my_wf, ipeds) # fits the model
+X_train, X_test = train_df[independent_cols], test_df[independent_cols]  # split our dataset between dependent and independent columns
+y_train, y_test = train_df[dependent_col], test_df[dependent_col]
 
-collect_metrics(fit_model) # examines accuracy
+model = LogisticRegression()  # Define the model object. Here is where we coul set any model parameters in the future
+model.fit(X=X_train, y=y_train)  # Train the model using the training dataset
+
+y_preds = model.predict(X_test)  # Make predictions on the test dataset
+accuracy = accuracy_score(y_test, y_preds)  # use sklearn built in functions to 
+print('accuracy:', round(accuracy, 2))
 ```
 
 The key to observe at this point is what is similar and different between the two approaches (regression and supervised machine learning). Both used the same underlying statistical model, but had some stark differences. Add two or more similarities and two or more differences (no wrong answers!) below.
